made some new additions

--- a/Website.html
+++ b/Website.html
@@ -8,6 +8,11 @@
     <title>Book Data</title>
 </head>
 <body>
+    <nav class=" navbar-brand">
+        
+    </nav>
+
+
     <h1>Book Data</h1>
     <table id="bookTable"  class="tableList">
         <thead>
