--- a/website-index.html
+++ b/website-index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcome to the Homepage!</h1>
     <a href="Website.html">Go to Search Page</a>
+    <p>pargaraph</p>
+
 </body>
 </html>
