tried to make headear into objects

--- a/Website.html
+++ b/Website.html
@@ -45,13 +45,18 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown
+                    sort by rating
                     </a>
                     <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">> 4.5</a></li>
+                    <li><a class="dropdown-item" href="#">> 4.0</a></li>
+                    <li><a class="dropdown-item" href="#">> 3.5</a></li>
+                    <li><a class="dropdown-item" href="#">> 3.0</a></li>
+                    <li><a class="dropdown-item" href="#">> 2.5</a></li>
+                    <li><a class="dropdown-item" href="#">> 2.0</a></li>
+                    <li><a class="dropdown-item" href="#">> 1.5</a></li>
+                    <li><a class="dropdown-item" href="#">> 1.0</a></li>
+                    
                     </ul>
                 </li>
                 <li class="nav-item">
