--- a/Website.html
+++ b/Website.html
@@ -43,19 +43,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="sort-asc-btn">Sort asc.</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="sort-desc-btn">Sort desc.</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     sort by rating
                     </a>
                     <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">> 4.5</a></li>
-                    <li><a class="dropdown-item" href="#">> 4.0</a></li>
-                    <li><a class="dropdown-item" href="#">> 3.5</a></li>
-                    <li><a class="dropdown-item" href="#">> 3.0</a></li>
-                    <li><a class="dropdown-item" href="#">> 2.5</a></li>
-                    <li><a class="dropdown-item" href="#">> 2.0</a></li>
-                    <li><a class="dropdown-item" href="#">> 1.5</a></li>
-                    <li><a class="dropdown-item" href="#">> 1.0</a></li>
+                    
                     
                     </ul>
                 </li>
